feat(b2b): add alert rules, project admin, usage metering, and webhook gate fix
Complete v1.2 multi-tenant product surface (V14–V16), enforce sync_status ID=1 singleton, and allow project-only webhook delivery without a global URL.

Co-authored-by: Cursor <cursoragent@cursor.com>