@@ -6,8 +6,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
 import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 /**
  * Orchestrates high-risk alert fan-out to all configured providers.
@@ -22,6 +24,7 @@ public class AlertService {
 
     private final List<AlertProvider> alertProviders;
     private final WatchlistCacheService watchlistCacheService;
+    private final AlertRuleCacheService alertRuleCacheService;
 
     @Value("${lucentflow.alert.global-risk-threshold:70}")
     private int globalRiskThreshold;
@@ -33,33 +36,16 @@ public class AlertService {
         if (tx == null) {
             return;
         }
-        List<WatchlistCacheService.WatchlistHit> hits =
-                watchlistCacheService.findHits(tx.getFromAddress(), tx.getToAddress());
 
-        int riskScore = tx.getRiskScore() == null ? 0 : tx.getRiskScore();
-        boolean isWatchlistHit = !hits.isEmpty();
-        if (!isWatchlistHit && riskScore < Math.max(0, globalRiskThreshold)) {
+        List<AlertDispatchContext> contexts = buildDispatchContexts(tx);
+        if (contexts.isEmpty()) {
             return;
-        }
-        List<AlertDispatchContext> contexts = new ArrayList<>();
-        if (hits.isEmpty()) {
-            contexts.add(new AlertDispatchContext(false, null, null, null, null, null));
-        } else {
-            for (WatchlistCacheService.WatchlistHit hit : hits) {
-                contexts.add(new AlertDispatchContext(
-                        true,
-                        hit.label(),
-                        hit.category(),
-                        hit.address(),
-                        hit.projectId(),
-                        hit.projectWebhookUrl()));
-            }
         }
 
         for (AlertProvider alertProvider : alertProviders) {
             List<AlertDispatchContext> providerContexts = alertProvider.supportsProjectScopedDispatch()
                     ? contexts
-                    : List.of(contexts.get(0));
+                    : List.of(contexts.getFirst());
             for (AlertDispatchContext context : providerContexts) {
                 try {
                     alertProvider.sendHighRiskAlertAsync(tx, context);
@@ -71,5 +57,65 @@ public class AlertService {
                 }
             }
         }
+    }
+
+    private List<AlertDispatchContext> buildDispatchContexts(WhaleTransaction tx) {
+        List<WatchlistCacheService.WatchlistHit> hits =
+                watchlistCacheService.findHits(tx.getFromAddress(), tx.getToAddress());
+
+        List<AlertDispatchContext> contexts = new ArrayList<>();
+        Set<Long> dispatchedProjects = new HashSet<>();
+
+        for (WatchlistCacheService.WatchlistHit hit : hits) {
+            if (hit.projectId() != null && dispatchedProjects.contains(hit.projectId())) {
+                continue;
+            }
+            AlertRuleCacheService.ProjectAlertRule rule = alertRuleCacheService.ruleForProject(hit.projectId());
+            if (!alertRuleCacheService.shouldAlert(rule, tx, true)) {
+                continue;
+            }
+            contexts.add(new AlertDispatchContext(
+                    true,
+                    hit.label(),
+                    hit.category(),
+                    hit.address(),
+                    hit.projectId(),
+                    resolveWebhookUrl(rule, hit.projectWebhookUrl())));
+            dispatchedProjects.add(hit.projectId());
+        }
+
+        for (AlertRuleCacheService.ProjectAlertRule rule : alertRuleCacheService.allRules()) {
+            if (rule.projectId() == null || dispatchedProjects.contains(rule.projectId())) {
+                continue;
+            }
+            if (!alertRuleCacheService.shouldAlert(rule, tx, false)) {
+                continue;
+            }
+            contexts.add(new AlertDispatchContext(
+                    false,
+                    null,
+                    null,
+                    null,
+                    rule.projectId(),
+                    rule.projectWebhookUrl()));
+            dispatchedProjects.add(rule.projectId());
+        }
+
+        if (contexts.isEmpty() && meetsGlobalThreshold(tx)) {
+            contexts.add(new AlertDispatchContext(false, null, null, null, null, null));
+        }
+        return contexts;
+    }
+
+    private boolean meetsGlobalThreshold(WhaleTransaction tx) {
+        int riskScore = tx.getRiskScore() == null ? 0 : tx.getRiskScore();
+        return riskScore >= Math.max(0, globalRiskThreshold);
+    }
+
+    private String resolveWebhookUrl(AlertRuleCacheService.ProjectAlertRule rule, String hitWebhookUrl) {
+        if (rule != null && rule.projectWebhookUrl() != null && !rule.projectWebhookUrl().isBlank()) {
+            return rule.projectWebhookUrl();
+        }
+        return hitWebhookUrl;
     }
 }
